<?xml version="1.0" encoding="UTF-8" ?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/medicationView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_margin="5dp"
    android:background="#FFFFFF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/componentText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/componentImage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/medication"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="2"
            android:gravity="center"
            android:text="@string/ibuprofeno"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/timesTaken"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/timesTaken"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:text="@string/timesTaken"
            app:layout_constraintEnd_toStartOf="@+id/dateTaken"
            app:layout_constraintStart_toEndOf="@id/medication"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/dateTaken"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="2"
            android:gravity="center"

            android:text="@string/date"
            app:layout_constraintStart_toEndOf="@id/timesTaken"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/componentImage"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="5dp"
        app:layout_constraintStart_toEndOf="@id/componentText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/delete"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="#00FFFFFF"
            android:src="@android:drawable/ic_delete"
            android:contentDescription="@string/img_delete"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>